# HomeworkOOP

./: README.md  pyproject.toml
OOP-WO-OOP/: pyproject.toml
OOP-WO-OOP/oop_wo_oop/: aspirant.py  bachelor.py  student.py
OOP_task/: README.md
OOP_task/oop_task/: MetaStudent.py  StudentAspirant.py  StudentBachelor.py  test_script.py
oop_wo_oop/: test.py
