[tool.poetry]
name = "oop-wo-oop"
version = "0.1.0"
description = ""
authors = ["Dzhalil"]
readme = "README.md"
packages = [{include = "oop_wo_oop"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
test = "oop_wo_oop.test:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
